// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`airDimensions.payloadInKg is falsy 1`] = `
<div
  className="layout-row layout-wrap layout-align-center content_width_booking"
  style={
    Object {
      "padding": "30px 0 70px 0",
    }
  }
>
  <div
    className="input_box flex-45 flex-sm-70 layout-row"
  >
    <div
      className="flex-25 layout-row layout-align-center-center"
    >
      Total Volume
    </div>
    <ShipmentAggregatedCargoInput
      handleDelta={[Function]}
      maxValue={35}
      name="volume"
      nextStageAttempt={false}
      t={[Function]}
      value={0}
    />
    <div
      className="flex-10 layout-row layout-align-center-center"
    >
      m³
    </div>
  </div>
  <div
    className="input_box flex-45 flex-sm-70 offset-gt-md-10 layout-row"
  >
    <div
      className="flex-25 layout-row layout-align-center-center"
    >
      Total Weight
    </div>
    <ShipmentAggregatedCargoInput
      handleDelta={[Function]}
      maxValue={35000}
      name="weight"
      nextStageAttempt={false}
      t={[Function]}
      value={220}
    />
    <div
      className="flex-10 layout-row layout-align-center-center"
    >
      kg
    </div>
  </div>
</div>
`;

exports[`shallow rendering 1`] = `
<div
  className="layout-row layout-wrap layout-align-center content_width_booking"
  style={
    Object {
      "padding": "30px 0 70px 0",
    }
  }
>
  <div
    className="input_box flex-45 flex-sm-70 layout-row"
  >
    <div
      className="flex-25 layout-row layout-align-center-center"
    >
      Total Volume
    </div>
    <ShipmentAggregatedCargoInput
      handleDelta={[Function]}
      maxValue={35}
      name="volume"
      nextStageAttempt={false}
      t={[Function]}
      value={0}
    />
    <div
      className="flex-10 layout-row layout-align-center-center"
    >
      m³
    </div>
  </div>
  <div
    className="input_box flex-45 flex-sm-70 offset-gt-md-10 layout-row"
  >
    <div
      className="flex-25 layout-row layout-align-center-center"
    >
      Total Weight
    </div>
    <ShipmentAggregatedCargoInput
      handleDelta={[Function]}
      maxValue={200}
      name="weight"
      nextStageAttempt={false}
      t={[Function]}
      value={220}
    />
    <div
      className="flex-10 layout-row layout-align-center-center"
    >
      kg
    </div>
  </div>
</div>
`;
